@@ -101,6 +101,9 @@
    <id>printer/Brother-HL-3400CN</id>
   </printer>
   <printer>
+   <id>printer/Brother-HL-5040</id>
+  </printer>
+  <printer>
    <id>printer/Brother-DCP-1200</id><!-- Brother DCP-1200 -->
   </printer>
   <printer>
