@@ -97,6 +97,12 @@
    </comments>
   </printer>
   <printer>
+   <id>printer/Brother-HL-5040</id><!-- Brother HL-5040 -->
+   <comments>
+    <en>300 or 600dpi PCL driver.</en>
+   </comments>
+  </printer>
+  <printer>
    <id>printer/Canon-GP_335</id><!-- Canon GP 335 -->
    <comments>
     <en>PCL printing also supported.</en>
