@@ -64,6 +64,9 @@
    <id>printer/Brother-HL-3400CN</id>
   </printer>
   <printer>
+   <id>printer/Brother-HL-5040</id>
+  </printer>
+  <printer>
    <id>printer/Canon-LBP-1000</id><!-- Canon LBP-1000 -->
   </printer>
   <printer>
