@@ -1,0 +1,83 @@
+<printer id="printer/Brother-HL-5040">
+  <make>Brother</make>
+  <model>HL-5040</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <margins>
+      <general>
+         <unit>mm</unit>
+         <top>4.2</top>
+         <bottom>4.2</bottom>
+         <left>6.01</left>
+         <right>6.01</right>
+      </general>
+      <exception PageSize="Letter">
+         <left>6.35</left>
+         <right>6.35</right>
+      </exception>
+      <exception PageSize="Legal">
+         <left>6.35</left>
+         <right>6.35</right>
+      </exception>
+      <exception PageSize="Executive">
+         <left>6.35</left>
+         <right>6.35</right>
+      </exception>
+    </margins>
+    <consumables>
+      <comments>
+        <en>Separate Toner and Drum</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.brother.com/usa/printer/info/hl5040/hl5040_ove.html</url>
+  <lang>
+    <pcl level="6"/>
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>A</functionality>
+  
+  <driver>hl1250</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    16 pages per minute, PCL 5e and PCL 6, 8 MB (136 MB max.), one
+    tray for 250 sheets (max A4/Legal, a second tray can be added),
+    parallel, USB 2.0.&lt;p&gt;
+
+    Highest resolution with "pxlmono" (PCL 6) seems to be 1200x1200
+    dpi, but complicated graphics (especially with bitmaps) is very
+    slow, full-page bitmaps in 1200 dpi can even make the printer
+    hang, usual documents (as e-mail from Mozilla) come out
+    quickly.&lt;p&gt;
+
+    "hl1250", the PCL-5e driver prints up to 1200x600 dpi. Much faster
+    on bitmap graphics.&lt;p&gt;
+
+    Brother provides a &lt;a
+    href="http://solutions.brother.com/linux/"&gt;driver&lt;/a&gt;
+    too, but binary-only and only for LPD/LPRng. According to the
+    printout quality it is based on the "ljet4" GhostScript
+    driver. "pxlmono", "gimp-print" (600 dpi), and "hpijs" (600 dpi)
+    give a better grayscale quality and all special features of the
+    printer are accessible by PJL commands.&lt;p&gt;
+
+    There is no manual in the box, you find it as PDF file on the CD
+    with the Windows/Mac drivers.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
