@@ -32,6 +32,9 @@
 	  printer/HP-2500CM.xml: Recommended GIMP-Print as best PCL driver
 	  for these models.
 
+	* printer/Brother-HL-5040.xml, driver/pxlmono.xml,
+	  driver/hl1250.xml, driver/ljet4.xml: Added Brother HL-5040.
+
 	* README: Updated for support of nested composite options.
 
 2003-07-29  David Suffield <david.suffield@hp.com>
